--- a/Assets/Resources/Languages/PLAbilityName.txt
+++ b/Assets/Resources/Languages/PLAbilityName.txt
@@ -1,14 +1,14 @@
-[0] Brak umiejêtnoœci
+ï»¿[0] Brak umiejÄ™tnoÅ›ci
 [1] Uszkodzenie
 [2] Wsparcie
 [3] Collapse
 [4] Terytorialne roszczenia
 [5] Odrzucenie
-[6] Os³ona
+[6] OsÅ‚ona
 [7] Lustrzane odbicie
-[8] Ogieñ zaporowy
+[8] OgieÅ„ zaporowy
 [9] Awans
 [10] Oczyszczenie
 [11] Podmiana pozycji
 [12] Grzmot
-[13] Równoœæ
+[13] RÃ³wnoÅ›Ä‡
