--- a/Assets/Resources/Languages/ENGUI.txt
+++ b/Assets/Resources/Languages/ENGUI.txt
@@ -59,5 +59,6 @@
 [58] Your game versions
 [59] List of game versions:
 [60] Quick online game
-[61] Wersje gry
+[61] Game versions
 [62] Begin game against AI
+[63] Opponents conceded.
