--- a/Assets/Resources/Languages/PLTokenName.txt
+++ b/Assets/Resources/Languages/PLTokenName.txt
@@ -1,5 +1,8 @@
 ﻿[0] Zwykły Żeton
 [1] Złoty Żeton
 [2] Pasożytniczy Żeton
-[3] Inspirujący Żeton
-[4] ... Żeton
+[3] Żeton Wzrostu
+[4] Żeton Rozkładu
+[5] Dynamitowy Żeton
+[6] Leniwy Żeton
+[7] Żeton Inflacji
