--- a/Assets/Resources/Languages/PLUI.txt
+++ b/Assets/Resources/Languages/PLUI.txt
@@ -90,4 +90,4 @@
 [89] Wersja gry w której chcesz zagrać nie spełnia wymogów gry. Wybierz inną wersję gry aby móc grać.
 [90] W tym edytorze możesz stworzyć swoją własną pulę kart. Wybierz wszystkie parametry i kliknij na wybraną pozycję aby ją dodać/zmodyfikować. Pula kart musi mieć co najmniej 8 kart aby była dopuszczona do gry.
 [91] Oczekiwanie na znalezienie pozostałych graczy. Pamiętaj że w twojej sieci LAN muszą być inni gracze, aby kogoś znalazło.
-[92] Anuuluj
+[92] Anuluj
