--- a/Assets/Resources/Languages/ENGUI.txt
+++ b/Assets/Resources/Languages/ENGUI.txt
@@ -58,7 +58,7 @@
 [57] Public game versions
 [58] Your game versions
 [59] List of game versions:
-[60] Quick online game
+[60] Quick game
 [61] Game versions
 [62] Begin game against AI
 [63] Opponents conceded.
