--- a/Assets/Resources/Languages/PLAbilityDescription.txt
+++ b/Assets/Resources/Languages/PLAbilityDescription.txt
@@ -24,3 +24,5 @@
 [23] Wrogie żetony będące celem kradną 1 pkt. wartości ostatnio zagranego żetonu.
 [24] Redukuje wartość żetonów będących celem o wartość równą liczbie przyjaznych żetonów będących celem.
 [25] Tworzy do 4 Zwykłych Żetonów na pustych polach będących celem.
+[26] Zmniejsza wartość najsłabszych żetonów będących celem o 1, oraz zwiększa wartość najsilniejszych żetonów będących celem o 1.
+[27] Zwiększa wartość żetonów będących celem o innym typie o 1.
