--- a/Assets/Resources/Languages/ENGUI.txt
+++ b/Assets/Resources/Languages/ENGUI.txt
@@ -109,3 +109,4 @@
 [108] Before applying select any option
 [109] Failed to connect to the game. Probably game has started or was canceled.
 [110] Hide chat
+[111] Deleting old unwanted files. Please wait.
