--- a/Assets/Resources/Languages/PLAbilityDescription.txt
+++ b/Assets/Resources/Languages/PLAbilityDescription.txt
@@ -22,7 +22,7 @@
 [21] Niszczy twoje żetony będące celem by zredukować wartość ostatnio zagranego żetonu o sumę ich wartości.
 [22] Zamienia typ ostatnio zagranego żetonu na typ żetonu będącego celem.
 [23] Wrogie żetony będące celem kradną 1 pkt. wartości ostatnio zagranego żetonu.
-[24] Redukuje wartość żetonów będących celem o wartość równą liczbie przyjaznych żetonów będących celem.
-[25] Tworzy do 3 Zwykłych Żetonów na pustych polach będących celem.
-[26] Zmniejsza wartość najsłabszych żetonów będących celem o 1, oraz zwiększa wartość najsilniejszych żetonów będących celem o 1.
-[27] Zwiększa wartość żetonów będących celem o innym typie o 1.
+[24] Redukuje wartości żetonów będących celem o wartość równą liczbie przyjaznych żetonów będących celem.
+[25] Tworzy do 3 Zwykłych Żetonów o wartości 1 na pustych polach będących celem.
+[26] Zmniejsza wartości najsłabszych żetonów będących celem o 1, oraz zwiększa wartości najsilniejszych żetonów będących celem o 1.
+[27] Zwiększa wartość żetonów będących celem o innym typie niż zagrany żeton o 1.
