--- a/Assets/Resources/Languages/PLAbilityDescription.txt
+++ b/Assets/Resources/Languages/PLAbilityDescription.txt
@@ -28,3 +28,6 @@
 [27] Zwiększa wartość żetonów będących celem o innym typie niż zagrany żeton o 1.
 [28] Podwój wartość ostatnio zagranego żetonu, oraz zwiększ wartość przyjaznego żetonu będącego celem o tą samą wartość.
 [29] Zniszcz do 2 wrogich żetonów będących celem.
+[30] Poświęć 20 punktów aby zniszczyć wszystkie żetony będące celem.
+[31] Utwórz Zwykłe Żetony o wartości 1 na szczątkach zniszczonych żetonów będących celem.
+[32] Zwiększa wartość zagrywanego żetonu o 1 za każde szczątki zniszczonych żetonów będących celem.
