--- a/Assets/Resources/Languages/PLTokenDescription.txt
+++ b/Assets/Resources/Languages/PLTokenDescription.txt
@@ -8,3 +8,4 @@
 [7] Wszystkie zagrywane żetony będą miały wartość większą o 1.
 [8] Pobliskie słabsze żetony nie mogą generować przyrostu punktacji.
 [9] Blokuje następną zagraną umiejętność, a gdy do tego dojdzie, zmienia się w Zwykły Żeton.
+[10] Generuje dodatkowy punkt przyrostu punktacji za każde sąsiadujące pole nie okupowane przez żeton.
